--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Documentation</h1>
+<ul>
+<li><a href="./cstest">cstest</a></li>
+</ul>
+</p>
 </body>
 </html>
