Adding cstest documentation

--- a/cstest/running-a-test.html
+++ b/cstest/running-a-test.html
@@ -27,28 +27,12 @@
             </div>
             <main class="mdl-layout__content">
                 <div class="csd-content">
-                    <h4>&nbsp;</h4>
-                    <p>csTest is a tool that provides a very simple interface for running automated test scripts.</p>
-                    <p>It provides a visual representation of the results of those tests as well as how long the test and each
-                        step took.The results and timings can be stored to give you a history of how your system is performing
-                        over time.</p>
-                    <p>For more information click on one of the following sections:</p>
-                    <p>
-                        <ul class="demo-list-item mdl-list">
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="running-a-test.html">Running a test</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="recent-tests.html">Recent tests</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="saved=tests.html">Saved tests</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="settings.html">Settings</spaan>
-                            </li>
-                        </ul>
-                    </p>
+                    <h4>Running a test</h4>
+                    <p>img of the app with the status area</p>
+                    <p>To run a test, click the Test dropdown box and then click the Run button. Depending on the type of test
+                        you have chosen various windows may appear while the test is running. The status of the test is displayed
+                        below the list of tests. Once the test is completed the results and timings for the test are added to the
+                        recent tests section.</p>
                 </div>
             </main>
         </div>
