--- a/cstest/saved-tests.html
+++ b/cstest/saved-tests.html
@@ -27,28 +27,13 @@
             </div>
             <main class="mdl-layout__content">
                 <div class="csd-content">
-                    <h4>&nbsp;</h4>
-                    <p>csTest is a tool that provides a very simple interface for running automated test scripts.</p>
-                    <p>It provides a visual representation of the results of those tests as well as how long the test and each
-                        step took.The results and timings can be stored to give you a history of how your system is performing
-                        over time.</p>
-                    <p>For more information click on one of the following sections:</p>
-                    <p>
-                        <ul class="demo-list-item mdl-list">
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="running-a-test.html">Running a test</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="recent-tests.html">Recent tests</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="saved=tests.html">Saved tests</a>
-                            </li>
-                            <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="settings.html">Settings</spaan>
-                            </li>
-                        </ul>
-                    </p>
+                    <h4>Saved tests</h4>
+                    <p>img of the saved tests section</p>
+                    <p>The saved tests section is similar to the recent tests section. Tests displayed here are saved for long
+                        term use. They can be used to compare timings for various tests over time or to capture error details
+                        for failed tests.</p>
+                    <p>Future versions of csTest may provide the ability to upload tests to a website or export to JSON or CSV
+                        for further analysis.</p>
                 </div>
             </main>
         </div>
