cstest docs for version 0.0.1

--- a/cstest/index.html
+++ b/cstest/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="app" data-ng-controller="AppController as app" ng-cloak=" ">
+<html lang="en">
 
 <head>
     <title>cs test</title>
@@ -23,15 +23,16 @@
                     <a class="mdl-navigation__link" href="recent-tests.html">Recent tests</a>
                     <a class="mdl-navigation__link" href="saved-tests.html">Saved tests</a>
                     <a class="mdl-navigation__link" href="settings.html">Settings</a>
+                    <a class="mdl-navigation__link" href="variables.html">Variables</a>
+                    <a class="mdl-navigation__link" href="technical.html">Technical</a>
                 </nav>
             </div>
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>&nbsp;</h4>
-                    <p>csTest is a tool that provides a very simple interface for running automated test scripts.</p>
-                    <p>It provides a visual representation of the results of those tests as well as how long the test and each
-                        step took.The results and timings can be stored to give you a history of how your system is performing
-                        over time.</p>
+                    <p>csTest provides a simple interface for running automated test scripts, including storing the results
+                        as well as how long the test and each step took. The results and timings can be stored to give you
+                        a history of how your system is performing over time.</p>
                     <p>For more information click on one of the following sections:</p>
                     <p>
                         <ul class="demo-list-item mdl-list">
@@ -45,7 +46,13 @@
                                 <a class="mdl-list__item-primary-content" href="saved=tests.html">Saved tests</a>
                             </li>
                             <li class="mdl-list__item">
-                                <a class="mdl-list__item-primary-content" href="settings.html">Settings</spaan>
+                                <a class="mdl-list__item-primary-content" href="settings.html">Settings</a>
+                            </li>
+                            <li class="mdl-list__item">
+                                <a class="mdl-list__item-primary-content" href="variables.html">Variables</a>
+                            </li>
+                            <li class="mdl-list__item">
+                                <a class="mdl-list__item-primary-content" href="technical.html">Technical</a>
                             </li>
                         </ul>
                     </p>
