--- a/cstest/recent-tests.html
+++ b/cstest/recent-tests.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="app" data-ng-controller="AppController as app" ng-cloak=" ">
+<html lang="en">
 
 <head>
     <title>cs test</title>
@@ -23,12 +23,14 @@
                     <a class="mdl-navigation__link" href="recent-tests.html">Recent tests</a>
                     <a class="mdl-navigation__link" href="saved-tests.html">Saved tests</a>
                     <a class="mdl-navigation__link" href="settings.html">Settings</a>
+                    <a class="mdl-navigation__link" href="variables.html">Variables</a>
+                    <a class="mdl-navigation__link" href="technical.html">Technical</a>
                 </nav>
             </div>
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>Recent tests</h4>
-                    <p>img of the recent tests section - one expanded</p>
+                    <p><img class="csd-screenshot" src="img/recent.png" aria-label="Recent tests"></p>
                     <p>When your test has completed the results and timings will be added to the recent tests section. Here
                         you can inspect the test, looking at reasons for test failures and the time taken to complete the
                         test and each step in the test. When you have finished inspecting the test you can either save or
@@ -41,8 +43,8 @@
                     <p>Further details for errors are available by clicking on the <span class="csd-ui-reference">Show stack 
                         trace</span> icon.</p>
                     <p>When looking at the test details you can choose to show only the failed tests or all tests. To change
-                        between the two views click the <span class="csd-ui-reference">Show failed results or Show all 
-                            results</span> switch at the top of the recent tests section.</p>
+                        between the two views click the <span class="csd-ui-reference">Show failed results</span> or
+                        <span class="csd-ui-reference">Show all results </span> switch at the top of the recent tests section.</p>
                 </div>
             </main>
         </div>
