--- a/cstest/saved-tests.html
+++ b/cstest/saved-tests.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="app" data-ng-controller="AppController as app" ng-cloak=" ">
+<html lang="en">
 
 <head>
     <title>cs test</title>
@@ -23,17 +23,19 @@
                     <a class="mdl-navigation__link" href="recent-tests.html">Recent tests</a>
                     <a class="mdl-navigation__link" href="saved-tests.html">Saved tests</a>
                     <a class="mdl-navigation__link" href="settings.html">Settings</a>
+                    <a class="mdl-navigation__link" href="variables.html">Variables</a>
+                    <a class="mdl-navigation__link" href="technical.html">Technical</a>
                 </nav>
             </div>
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>Saved tests</h4>
-                    <p>img of the saved tests section</p>
+                    <p><img class="csd-screenshot" src="img\saved.png" aria-label="Test chooser"></p>
                     <p>The saved tests section is similar to the recent tests section. Tests displayed here are saved for long
                         term use. They can be used to compare timings for various tests over time or to capture error details
-                        for failed tests.</p>
-                    <p>Future versions of csTest may provide the ability to upload tests to a website or export to JSON or CSV
-                        for further analysis.</p>
+                        for failed tests. Tests can be viewed and deleted as they can in the recent tests section.</p>
+                    <p>To export your results to CSV click the <span class="csd-ui-reference">Export</span> button and follow
+                        the prompts.</p>
                 </div>
             </main>
         </div>
