Changing name to stamp

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Documentation</h1>
 <ul>
-<li><a href="./cstest">cstest</a></li>
+<li><a href="./stamp">stamp</a></li>
 </ul>
 </p>
 </body>
