--- a/stamp/index.html
+++ b/stamp/index.html
@@ -12,7 +12,7 @@
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
-                    <span class="mdl-layout__title">csTest</span>
+                    <span class="mdl-layout__title">stamp</span>
                     <div class="mdl-layout-spacer"></div>
                 </div>
             </header>
@@ -30,7 +30,7 @@
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>&nbsp;</h4>
-                    <p>csTest provides a simple interface for running automated test scripts, including storing the results
+                    <p>stamp provides a simple interface for running automated test scripts, including storing the results
                         as well as how long the test and each step took. The results and timings can be stored to give you
                         a history of how your system is performing over time.</p>
                     <p>For more information click on one of the following sections:</p>
