--- a/stamp/settings.html
+++ b/stamp/settings.html
@@ -12,7 +12,7 @@
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
-                    <span class="mdl-layout__title">csTest</span>
+                    <span class="mdl-layout__title">stamp</span>
                     <div class="mdl-layout-spacer"></div>
                 </div>
             </header>
@@ -30,8 +30,8 @@
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>Settings</h4>
-                    <p>Settings allow you to change the behaviour of csTest and control the tests you use. To access settings
-                        click the menu icon next to the csTest title, then click the <span class="csd-ui-reference">Settings
+                    <p>Settings allow you to change the behaviour of stamp and control the tests you use. To access settings
+                        click the menu icon next to the stamp title, then click the <span class="csd-ui-reference">Settings
                             </span> menu option.</p>
                     <p>The settings sections are:
                         <ul>
@@ -72,7 +72,7 @@
                         then click the <span class="csd-ui-reference">Update</span> button</p>
                     </p>
                     <p><img class="csd-screenshot-small" src="img\updatetest.png" aria-label="Update Test settings"></p>
-                    <p><strong>New Test</strong><br>To add a new test to csTest click the <span class="csd-ui-reference">
+                    <p><strong>New Test</strong><br>To add a new test to stamp click the <span class="csd-ui-reference">
                         Choose Test</span> or <span class="csd-ui-reference">Choose Config</span> buttons to choose the files
                         to be used to create the test, then click the <span class="csd-ui-reference">Create</span> button</p>
                     <p><img class="csd-screenshot-small" src="img\newtest.png" aria-label="New Test settings"></p>
@@ -84,7 +84,7 @@
 
                     <h5>Reset</h5>
                     <p><img class="csd-screenshot-small" src="img\reset.png" aria-label="Reset"></p>
-                    <p>Clicking the Reset button will reset csTest to the default settings. You may want to use this to remove
+                    <p>Clicking the Reset button will reset stamp to the default settings. You may want to use this to remove
                         all tests and test variables you may have added to the application.</p>
                 </div>
             </main>
