--- a/stamp/technical.html
+++ b/stamp/technical.html
@@ -12,7 +12,7 @@
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
-                    <span class="mdl-layout__title">csTest</span>
+                    <span class="mdl-layout__title">stamp</span>
                     <div class="mdl-layout-spacer"></div>
                 </div>
             </header>
@@ -30,9 +30,9 @@
             <main class="mdl-layout__content">
                 <div class="csd-content">
                     <h4>Technical</h4>
-                    <p>csTest relies on a number of open source packages to work. At a high level:
+                    <p>stamp relies on a number of open source packages to work. At a high level:
                         <ul>
-                            <li>csTest is an implementation of <a href="http://electron.atom.io/" target="_blank">Electron</a></li>
+                            <li>stamp is an implementation of <a href="http://electron.atom.io/" target="_blank">Electron</a></li>
                             <li>Integration with the various browsers is provided by
                                 <a href="http://www.seleniumhq.org/" target="_blank">Selenium</a></li>
                             <li>The test files are written in JavaScript and use the
@@ -43,7 +43,7 @@
                     </p>
                     <p>If you are comfortable with command line based tools you may prefer to look at
                         <a href="http://angular.github.io/protractor/#/" target="_blank">Protractor</a> for a more easily
-                        scripted approach to automated testing. Or you could take a similar approach to csTest and use the
+                        scripted approach to automated testing. Or you could take a similar approach to stamp and use the
                         Node version of Jasmine directly.</p>
                 </div>
             </main>
