--- a/stamp/running-a-test.html
+++ b/stamp/running-a-test.html
@@ -12,7 +12,7 @@
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
-                    <span class="mdl-layout__title">csTest</span>
+                    <span class="mdl-layout__title">stamp</span>
                     <div class="mdl-layout-spacer"></div>
                 </div>
             </header>
