--- a/stamp/settings.html
+++ b/stamp/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>cs test</title>
+    <title>stamp</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
     <link rel="stylesheet" href="css/style.css">
